--- a/Day3/index.html
+++ b/Day3/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.css">
+    <link href="./style.css" rel="stylesheet">
     <title>BootCamp9.Day3</title>
 </head>
 <body>
-   <div class="conteiner">
+    <p>Paragraph</p>
+    <div class="conteiner">
        <div class="box1">1</div>
        <div class="box2">2</div>
        <div class="box3">3</div>
