fix li tag/ :wq

--- a/module-01/index.html
+++ b/module-01/index.html
@@ -11,10 +11,10 @@
     <h1></h1>
     <menu>
       <ul>
-        <il><a href="#">lifestile</a></il>
-        <il><a href="#">photodiary</a></il>
-        <il><a href="#">music</a></il>
-        <il><a href="#">travel</a></il>
+        <li><a href="#">lifestile</a></li>
+        <li><a href="#">photodiary</a></li>
+        <li><a href="#">music</a></li>
+        <li><a href="#">travel</a></li>
       </ul>
     </menu>
    </header>
