--- a/module-01/index.html
+++ b/module-01/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <header>
-    <h1></h1>
+    <!-- <h1></h1> -->
     <menu>
       <ul>
         <li><a href="#">lifestile</a></li>
@@ -23,25 +23,24 @@
            <img src="img/img1.jpeg" alt="">
            <p>lifestile</p>
            <h2>More then just a music festival</h2>
-           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo adipisci voluptatem recusandae doloremque ullam. Doloribus enim odit eligendi nesciunt dolorum sequi quos, quia in possimus modi, tempora omnis culpa vel quidem dignissimos fugit quasi autem consectetur totam animi aliquam. Expedita.</p>
-       </section>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
        <section class="section">
            <img src="img/img2.jpeg" alt="">
            <p>lifestile</p>
            <h2>Life tastes better with coffe</h2>
-           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo adipisci voluptatem recusandae doloremque ullam. Doloribus enim odit eligendi nesciunt dolorum sequi quos, quia in possimus modi, tempora omnis culpa vel quidem dignissimos fugit quasi autem consectetur totam animi aliquam. Expedita.</p>
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
        </section>
        <section class="section">
           <img src="img/img3.jpeg" alt="">
           <p>photodiary</p>
           <h2>American dream</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo adipisci voluptatem recusandae doloremque ullam. Doloribus enim odit eligendi nesciunt dolorum sequi quos, quia in possimus modi, tempora omnis culpa vel quidem dignissimos fugit quasi autem consectetur totam animi aliquam. Expedita.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
         </section>
         <section class="section">
           <img src="img/img4.jpeg" alt="">
           <p>photodiary</p>
           <h2>A day exploring the Alps</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nemo adipisci voluptatem recusandae doloremque ullam. Doloribus enim odit eligendi nesciunt dolorum sequi quos, quia in possimus modi, tempora omnis culpa vel quidem dignissimos fugit quasi autem consectetur totam animi aliquam. Expedita.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
         </section>
            
    </main>
