--- a/module-04/index.html
+++ b/module-04/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,900" rel="stylesheet">
     <link href="./style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1 class="upper">mart</h1>
-        <ul class="menu upper">
+    <header class="header">
+        <img src="./img/logo.png" alt="logo">
+        <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">home</a></li>
             <li class="menu-item"><a href="#" class="menu-link">about us</a></li>
             <li class="menu-item"><a href="#" class="menu-link">page</a></li>
@@ -19,14 +20,61 @@
             <li class="menu-item"><a href="#" class="menu-link">contact us</a></li>
         </ul>
     </header>
-    <main>
-        <h2 class="upper">featured products</h2>
 
-        <p class="block">
-            <span class="name">blue</span>
-            <span class="price">54</span>
-        </p>
-
+    <main class="main">
+        <section class="products">
+            <h2 class="products-title">featured products</h2>
+            <ul class="product-list">
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/1.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name">blue tshirt</span><span class="price">$26</span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/2.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/3.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/4.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/5.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/6.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/7.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+                <li class="prod-item">
+                    <a href="#" class="prod-link">
+                        <img src="./img/8.png" alt="" class="prod-img">
+                        <p class="prod-paragraf"><span class="name"></span><span class="price"></span></p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
 </body>
