Допилы до обеда

--- a/class-day-05/index.html
+++ b/class-day-05/index.html
@@ -12,7 +12,7 @@
         <header class="header clearfix">
             <h1>
                 <a href="#" class="">
-                    <img class="logo-header-footer" src="./img/logo-header-footer.png" alt="company logo">
+                    <img class="logo-img" src="./img/tajam.png" alt="company logo">
                 </a>
             </h1>
             <ul class="menu">
@@ -26,9 +26,10 @@
                 </ul>
         </header>
         <div class="slider">
-           <h2 class="main-title">We Are Awesome Creative Agency</h2>
+           <h2 class="slider-title">We Are Awesome Creative Agency</h2>
            <p class="slider-text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</p>
-           <a href="#" class="more">LEARN MORE</a> 
+           <a href="#" class="more">LEARN MORE</a>
+           <img src="./img/dots.png" alt="dots" class="dots">
         </div>
     </div>
     <div class="main">
