Макет готов до контейнера player

--- a/class-day-05/index.html
+++ b/class-day-05/index.html
@@ -39,11 +39,13 @@
                 <h2 class="title">Our Story</h2>
                 <p class="story-text">This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus.</p>
                 <p class="story-text">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
-                <a href="#" class="more left-alignment">LEARN MORE</a>
+                <a href="#" class="more">LEARN MORE</a>
             </div>
         </section>
         <section class="player">
-            <button class="player-button"></button>
+            <button class="player-button">
+                <img class="player-img" src="./img/player-button.png" alt="play">
+            </button>
             <h3 class="player-text white">WATCH OUR STORY</h3>
         </section>
         <section class="expertise">
