--- a/class-day-06/index.html
+++ b/class-day-06/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./css/styles.css" rel="stylesheets">
+    <link href="./css/styles.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <div class="block1"></div>
-    <div class="block2"></div>
-    <div class="block3"></div>
+    <div class="wrapper">
+        <div class="block1"></div>
+        <div class="block2"></div>
+        <div class="block3"></div>
+    </div>
 </body>
 </html>
