--- a/class-day-06/index.html
+++ b/class-day-06/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper hover">
         <div class="block1"></div>
         <div class="block2"></div>
         <div class="block3"></div>
