--- a/class-day-06/index.html
+++ b/class-day-06/index.html
@@ -8,10 +8,31 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">I`m fixed header</header>
+    <ul class="menu">
+        <li class="menu-item">Home</li>
+        <li class="menu-item">Goods
+            <ul class="submenu">
+                <li class="submenu-item">Fish</li>
+                <li class="submenu-item">Vine
+                    <ul class="sub-submenu">
+                        <li class="sub-submenu">Red</li>
+                        <li class="sub-submenu">Rose</li>
+                        <li class="sub-submenu">White</li>
+                    </ul>
+                </li>
+                <li class="submenu-item">Bread</li>
+            </ul>
+        </li>
+        <li class="menu-item">About</li>
+    </ul>
+    <div class="wrapper"></div>
     <div class="wrapper hover">
         <div class="block1"></div>
         <div class="block2"></div>
         <div class="block3"></div>
     </div>
+    <div class="totop"><a href="#">To top</a></div>
+    <footer class="footer">Fixed footer</footer>
 </body>
 </html>
