View / unview submenu

--- a/class-day-06/index.html
+++ b/class-day-06/index.html
@@ -11,10 +11,10 @@
     <header class="header">I`m fixed header</header>
     <ul class="menu">
         <li class="menu-item">Home</li>
-        <li class="menu-item">Goods
+        <li class="menu-item goods">Goods
             <ul class="submenu">
                 <li class="submenu-item">Fish</li>
-                <li class="submenu-item">Vine
+                <li class="submenu-item">Wine
                     <ul class="sub-submenu">
                         <li class="sub-submenu">Red</li>
                         <li class="sub-submenu">Rose</li>
