--- a/class-day-06/index.html
+++ b/class-day-06/index.html
@@ -14,7 +14,7 @@
         <li class="menu-item goods">Goods
             <ul class="submenu">
                 <li class="submenu-item">Fish</li>
-                <li class="submenu-item">Wine
+                <li class="submenu-item wine">Wine
                     <ul class="sub-submenu">
                         <li class="sub-submenu">Red</li>
                         <li class="sub-submenu">Rose</li>
