--- a/module-05/index.html
+++ b/module-05/index.html
@@ -8,11 +8,19 @@
     <title>Module-05</title>
 </head>
 <body>
-    <div class="buttons-menu">
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-        <button class="button"></button>
-    </div>
+    <header></header>
+   <main>
+       <section class="">
+            <div class="buttons-menu">
+                <button class="button"></button>
+                <button class="button"></button>
+                <button class="button"></button>
+                <button class="button"></button>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <p>All Rights Reserved © Dokan | Designed <a href="#">ThemenGraph</a></p>
+    </footer>
 </body>
 </html>
