--- a/module-05/index.html
+++ b/module-05/index.html
@@ -8,19 +8,48 @@
     <title>Module-05</title>
 </head>
 <body>
-    <header></header>
-   <main>
-       <section class="">
-            <div class="buttons-menu">
-                <button class="button"></button>
-                <button class="button"></button>
-                <button class="button"></button>
-                <button class="button"></button>
-            </div>
+    <header class="header">
+        <img src="./img/mart.png" alt="logo">
+        <ul class="menu">
+            <li class="menu-item"><a href="#" class="menu-link">home</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">about us</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">page</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">shop</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">blog</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">contact us</a></li>
+        </ul>
+    </header>
+
+    <main>
+       <div class="slider">
+           <h2>AFFORDABLE PARIS TOURS</h2>
+           <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+       </div>
+       <section class="new-collection">
+           <h2>New collection</h2>
+           <div class="cards">
+               <ul class="item-cards">
+                   <li class="item1"></li>
+                   <li class="item2"></li>
+                   <li class="item3"></li>
+                   <li class="item4"></li>
+               </ul>
+           </div>
         </section>
     </main>
     <footer class="footer">
         <p>All Rights Reserved © Dokan | Designed <a href="#">ThemenGraph</a></p>
     </footer>
+
+    <div class="buttons-menu">
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
+            <button class="button"></button>
+        </div>
+
+        <ul class="item-card">
+            <il class="item"></il>
+        </ul>
 </body>
 </html>
