--- a/module-05/index.html
+++ b/module-05/index.html
@@ -28,13 +28,85 @@
        <section class="new-collection">
            <h2>New collection</h2>
            <div class="cards">
-               <ul class="item-cards">
-                   <li class="item1"></li>
-                   <li class="item2"></li>
-                   <li class="item3"></li>
-                   <li class="item4"></li>
-               </ul>
-           </div>
+                <ul class="product-list">
+                    <li class="product-item">
+                        <a href="" class="prod-link">
+                            <div class="wrapper">
+                                <img src="./img/category-1.png" alt="product card" class="prod-img">
+                                <div class="buttons">
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
+                                        <button class="add">
+                                            <span class="basket">add to cart</span>
+                                        </button>
+                                </div>
+                            </div>
+                            <p class="prod-paragraf">
+                                <span class="name">blue tshirt</span>
+                                <span class="price">$26</span>
+                            </p>
+                        </a>
+                    </li>
+                    <li class="product-item">
+                        <a href="" class="prod-link">
+                            <div class="wrapper">
+                                <img src="./img/category-2.png" alt="product card" class="prod-img">
+                                <div class="buttons">
+                                    <button class="icon like"></button>
+                                    <button class="icon shuffle"></button>
+                                    <button class="icon clock"></button>
+                                    <button class="add">
+                                            <span class="basket">add to cart</span>
+                                    </button>
+                                </div>
+                            </div>
+                            <p class="prod-paragraf">
+                                    <span class="name">woman shirt</span>
+                                    <span class="price">$31</span>
+                                </p>
+                            </a>
+                    </li>
+                    <li class="product-item">
+                        <a href="" class="prod-link">
+                            <div class="wrapper">
+                                <img src="./img/category-3.png" alt="product card" class="prod-img">
+                                <div class="buttons">
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
+                                        <button class="add">
+                                            <span class="basket">add to cart</span>
+                                        </button>
+                                </div>
+                            </div>
+                                <p class="prod-paragraf">
+                                    <span class="name">yellow tshirt</span>
+                                    <span class="price">$21</span>
+                                </p>
+                            </a>
+                    </li>
+                    <li class="product-item">
+                        <a href="" class="prod-link">
+                            <div class="wrapper">
+                                <img src="./img/category-4.png" alt="product card" class="prod-img">
+                                <div class="buttons">
+                                        <button class="icon like"></button>
+                                        <button class="icon shuffle"></button>
+                                        <button class="icon clock"></button>
+                                        <button class="add">
+                                            <span class="basket">add to cart</span>
+                                        </button>
+                                </div>
+                            </div>
+                                <p class="prod-paragraf">
+                                    <span class="name">Cool lingerie</span>
+                                    <span class="price">$56</span>
+                                </p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer class="footer">
