--- a/module-05/index.html
+++ b/module-05/index.html
@@ -22,8 +22,10 @@
 
     <main>
        <div class="slider">
-           <h2>AFFORDABLE PARIS TOURS</h2>
-           <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+            <div class="slider-block">
+                <h2>AFFORDABLE PARIS TOURS</h2>
+                <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+            </div>
        </div>
        <section class="new-collection">
            <h2>New collection</h2>
