--- a/module-05/index.html
+++ b/module-05/index.html
@@ -21,12 +21,14 @@
     </header>
 
     <main>
-       <div class="slider">
+       <section class="slider">
             <div class="slider-block">
-                <h2>AFFORDABLE PARIS TOURS</h2>
-                <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                <div class="tours">
+                    <h2>AFFORDABLE PARIS TOURS</h2>
+                    <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
+                </div>
             </div>
-       </div>
+        </section>
        <section class="new-collection">
            <h2>New collection</h2>
            <div class="cards">
@@ -114,16 +116,5 @@
     <footer class="footer">
         <p>All Rights Reserved © Dokan | Designed <a href="#">ThemenGraph</a></p>
     </footer>
-
-    <div class="buttons-menu">
-            <button class="button"></button>
-            <button class="button"></button>
-            <button class="button"></button>
-            <button class="button"></button>
-        </div>
-
-        <ul class="item-card">
-            <il class="item"></il>
-        </ul>
 </body>
 </html>
