--- a/module-05/task-02/index.html
+++ b/module-05/task-02/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main-box">
+        <div class="box item1"></div>
+        <div class="box item2"></div>
+        <div class="box item3"></div>
+        <div class="box item4"></div>
+        <div class="box item5"></div>
+        <div class="box item6"></div>
+        <div class="box item7"></div>
+        <div class="box item8"></div>
+        <div class="box item9"></div>
+    </div>
 </body>
 </html>
