--- a/module-03/index.html
+++ b/module-03/index.html
@@ -4,46 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>GoIT-FS9-Module03</title>
 </head>
 <body>
-   <header class="header">
-    <!-- <h1></h1> -->
-    <menu>
-      <ul>
-        <li><a href="#">lifestile</a></li>
-        <li><a href="#">photodiary</a></li>
-        <li><a href="#">music</a></li>
-        <li><a href="#">travel</a></li>
-      </ul>
-    </menu>
-   </header>
-   <main class="main">
-       <section class="section">
-           <img src="img/img1.jpeg" alt="">
-           <p>lifestile</p>
-           <h2>More then just a music festival</h2>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
-       <section class="section">
-           <img src="img/img2.jpeg" alt="">
-           <p>lifestile</p>
-           <h2>Life tastes better with coffe</h2>
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
-       </section>
-       <section class="section">
-          <img src="img/img3.jpeg" alt="">
-          <p>photodiary</p>
-          <h2>American dream</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
+    <header class="header">
+        <!-- <h1></h1> -->
+        <nav class="nav">
+            <ul class="menu">
+                <li class="menu-item"><a href="#">lifestyle</a></li>
+                <li class="menu-item"><a href="#">photodiary</a></li>
+                <li class="menu-item"><a href="#">music</a></li>
+                <li class="menu-item"><a href="#">travel</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="section">
+            <img src="img/img1.jpeg" alt="image">
+            <p class="index">lifestile</p>
+            <h2>More then just a music festival</h2>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                <span class="hide"> nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                </span>
+            </p>
         </section>
         <section class="section">
-          <img src="img/img4.jpeg" alt="">
-          <p>photodiary</p>
-          <h2>A day exploring the Alps</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse incidunt, quidem quis nulla placeat nobis, ut eveniet facilis vel facere veniam architecto fuga obcaecati aliquam eaque unde voluptatum est molestiae tempora. Magnam libero reiciendis repudiandae enim quasi ipsam recusandae assumenda numquam saepe. Velit reiciendis placeat harum quia dicta corrupti ullam cupiditate dolorum? Suscipit ut eaque, asperiores nisi aperiam qui doloremque inventore similique omnis. Libero nostrum hic nesciunt dolorum laudantium, ea beatae, nihil iure sunt aspernatur debitis expedita tempora fugiat eaque quasi facilis velit? Commodi ut nisi sint quisquam corporis nam eveniet tenetur? Veniam a consequuntur aut eos commodi tenetur ex cumque modi omnis fuga debitis doloribus eligendi iusto eum ipsam facilis numquam vel, soluta odit fugit aliquam. Vero, illum temporibus?</p>       </section>
+            <img src="img/img2.jpeg" alt="image">
+            <p class="index">lifestile</p>
+            <h2>Life tastes better with coffe</h2>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                <span class="hide"> nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                </span>
+            </p>
         </section>
-           
+        <section class="section">
+            <img src="img/img3.jpeg" alt="image">
+            <p class="index">photodiary</p>
+            <h2>American dream</h2>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                <span class="hide"> nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                </span>
+            </p>
+        </section>
+        <section class="section">
+            <img src="img/img4.jpeg" alt="image">
+            <p class="index">photodiary</p>
+            <h2>A day exploring the Alps</h2>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                <span class="hide"> nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                </span>
+            </p>
+        </section>      
    </main>
    <footer>
        <button class="more">load more</button>
