--- a/class-day-08/index.html
+++ b/class-day-08/index.html
@@ -8,6 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="logo"></div>
+        <ul class="nav">
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+            <li class="nav-item"></li>
+        </ul>
+    </header>
+    <main class="main">
+        <div class="box">
+            <div class="box-base">
+                <h2>Lorem ipsum</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eaque, odio reprehenderit possimus cumque quod delectus et aspernatur maxime optio modi numquam ratione ipsum aut omnis quam esse sapiente expedita consectetur ducimus ab odit animi, iure quibusdam. Nihil repellendus saepe, ad, omnis odit porro nam accusantium ex commodi, voluptatem reiciendis ab illum earum natus?
+                </p>
+            </div>
+            <div class="box-side">
+                <img src="https://picsum.photos/200/?random" alt="" class="box-img">
+            </div>
+        </div>
+    </main>
+    <footer class="footer">footer</footer>
 </body>
 </html>
