--- a/module-05/index.html
+++ b/module-05/index.html
@@ -23,10 +23,12 @@
     <main>
        <section class="slider">
             <div class="slider-block">
+                <div class="left"></div>
                 <div class="tours">
                     <h2>AFFORDABLE PARIS TOURS</h2>
                     <p>CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
                 </div>
+                <div class="right"></div>
             </div>
         </section>
        <section class="new-collection">
