--- a/module-05/index.html
+++ b/module-05/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="./img/mart.png" alt="logo">
+        <h1><img src="./img/mart.png" alt="logo"></h1>
         <ul class="menu">
             <li class="menu-item"><a href="#" class="menu-link">home</a></li>
             <li class="menu-item"><a href="#" class="menu-link">about us</a></li>
@@ -36,26 +36,26 @@
            <div class="cards">
                 <ul class="product-list">
                     <li class="product-item">
-                        <a href="" class="prod-link">
+                        <div class="prod-link">
                             <div class="wrapper">
                                 <img src="./img/category-1.png" alt="product card" class="prod-img">
                                 <div class="buttons">
-                                        <button class="icon like"></button>
-                                        <button class="icon shuffle"></button>
-                                        <button class="icon clock"></button>
-                                        <button class="add">
-                                            <span class="basket">add to cart</span>
-                                        </button>
+                                    <button class="icon like"></button>
+                                    <button class="icon shuffle"></button>
+                                    <button class="icon clock"></button>
+                                    <button class="add">
+                                        <span class="basket">add to cart</span>
+                                    </button>
                                 </div>
                             </div>
                             <p class="prod-paragraf">
                                 <span class="name">blue tshirt</span>
                                 <span class="price">$26</span>
                             </p>
-                        </a>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <a href="" class="prod-link">
+                        <div class="prod-link">
                             <div class="wrapper">
                                 <img src="./img/category-2.png" alt="product card" class="prod-img">
                                 <div class="buttons">
@@ -63,53 +63,53 @@
                                     <button class="icon shuffle"></button>
                                     <button class="icon clock"></button>
                                     <button class="add">
-                                            <span class="basket">add to cart</span>
+                                        <span class="basket">add to cart</span>
                                     </button>
                                 </div>
                             </div>
                             <p class="prod-paragraf">
-                                    <span class="name">woman shirt</span>
-                                    <span class="price">$31</span>
-                                </p>
-                            </a>
+                                <span class="name">woman shirt</span>
+                                <span class="price">$31</span>
+                            </p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <a href="" class="prod-link">
+                        <div class="prod-link">
                             <div class="wrapper">
                                 <img src="./img/category-3.png" alt="product card" class="prod-img">
                                 <div class="buttons">
-                                        <button class="icon like"></button>
-                                        <button class="icon shuffle"></button>
-                                        <button class="icon clock"></button>
-                                        <button class="add">
-                                            <span class="basket">add to cart</span>
-                                        </button>
+                                    <button class="icon like"></button>
+                                    <button class="icon shuffle"></button>
+                                    <button class="icon clock"></button>
+                                    <button class="add">
+                                        <span class="basket">add to cart</span>
+                                    </button>
                                 </div>
                             </div>
-                                <p class="prod-paragraf">
-                                    <span class="name">yellow tshirt</span>
-                                    <span class="price">$21</span>
-                                </p>
-                            </a>
+                            <p class="prod-paragraf">
+                                <span class="name">yellow tshirt</span>
+                                <span class="price">$21</span>
+                            </p>
+                        </div>
                     </li>
                     <li class="product-item">
-                        <a href="" class="prod-link">
+                        <div class="prod-link">
                             <div class="wrapper">
                                 <img src="./img/category-4.png" alt="product card" class="prod-img">
                                 <div class="buttons">
-                                        <button class="icon like"></button>
-                                        <button class="icon shuffle"></button>
-                                        <button class="icon clock"></button>
-                                        <button class="add">
-                                            <span class="basket">add to cart</span>
-                                        </button>
+                                    <button class="icon like"></button>
+                                    <button class="icon shuffle"></button>
+                                    <button class="icon clock"></button>
+                                    <button class="add">
+                                        <span class="basket">add to cart</span>
+                                    </button>
                                 </div>
                             </div>
-                                <p class="prod-paragraf">
-                                    <span class="name">Cool lingerie</span>
-                                    <span class="price">$56</span>
-                                </p>
-                        </a>
+                            <p class="prod-paragraf">
+                                <span class="name">Cool lingerie</span>
+                                <span class="price">$56</span>
+                            </p>
+                        </div>
                     </li>
                 </ul>
             </div>
