--- a/module-05/index.html
+++ b/module-05/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Module-05</title>
+    <title>GoIT-FS9-Module05</title>
 </head>
 <body>
     <header class="header">
