--- a/module-06/index.html
+++ b/module-06/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>GoIT-FS9-Module06</title>
 </head>
 <body>
-    
+    <header class="header">
+        <h1 class="logo">MoGo</h1>
+        <ul class="menu">
+            <li class="menu-item"><a href="#" class="menu-link">about</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">service us</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">work</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">blog</a></li>
+            <li class="menu-item"><a href="#" class="menu-link">contact</a></li>
+        </ul>
+    </header>
+
 </body>
 </html>
