--- a/class-day-09/index.html
+++ b/class-day-09/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>GoIT-ClassWork-09</title>
 </head>
 <body>
-    
+    <section class="contactus">
+        <div class="box">
+            <h2 class="contact__item">contact us</h2>
+            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+            <button>contact us</button>
+        </div>
+    </section>
 </body>
 </html>
