Upd CW D09 at 18.12 2018.11.22

--- a/class-day-09/index.html
+++ b/class-day-09/index.html
@@ -9,12 +9,38 @@
     <title>GoIT-ClassWork-09</title>
 </head>
 <body>
-    <section class="contactus">
-        <div class="box">
-            <h2 class="contact__item">contact us</h2>
-            <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
-            <button>contact us</button>
-        </div>
+    <section class="tile">
+        <ul class="tile-list">
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+            <il class="tile-item">
+                <p class="tile-title"></p>
+            </il>
+        </ul>
     </section>
+    <section class="contactus">
+        <fieldset class="contactus-box">
+            <legend class="contactus-legend">contact us</legend>
+            <p class="contactus-paragraph">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
+            <button class="contactus-button">contact us</button>
+        </fieldset>
+    </section>
+    <footer class="footer">
+        <img src="./img/logo-small.png" alt="small logo">
+        <p class="footer-copyright">© 2014. All Rights Reserved Ellipsis.com</p>
+    </footer>
 </body>
 </html>
