--- a/class-day-09/index.html
+++ b/class-day-09/index.html
@@ -5,29 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/iroyfooter.css">
     <title>GoIT-ClassWork-09</title>
 </head>
 <body>
-    <section class="tile">
-        <ul class="tile-list">
-            <il class="tile-item">
-                <p class="tile-title"></p>
+    <section class="tiles">
+        <ul class="tiles-list">
+            <il class="tiles-item">
+                <img src="./img/img01.png" alt="">
+                <p class="tiles-title">topworkz</p>
             </il>
-            <il class="tile-item">
-                <p class="tile-title"></p>
+            <il class="tiles-item">
+                <img src="./img/img02.png" alt="">
+                <p class="tiles-title">joint</p>
             </il>
-            <il class="tile-item">
-                <p class="tile-title"></p>
+            <il class="tiles-item">
+                <img src="./img/img03.png" alt="">
+                <p class="tiles-title">MArket</p>
             </il>
-            <il class="tile-item">
-                <p class="tile-title"></p>
+            <il class="tiles-item">
+                <img src="./img/img04.png" alt="">
+                <p class="tiles-title">worktop</p>
             </il>
-            <il class="tile-item">
-                <p class="tile-title"></p>
+            <il class="tiles-item">
+                <img src="./img/img05.png" alt="">
+                <p class="tiles-title">lable</p>
             </il>
-            <il class="tile-item">
-                <p class="tile-title"></p>
+            <il class="tiles-item">
+                <img src="./img/img06.png" alt="">
+                <p class="tiles-title">Kyiv</p>
             </il>
         </ul>
     </section>
@@ -35,12 +41,16 @@
         <fieldset class="contactus-box">
             <legend class="contactus-legend">contact us</legend>
             <p class="contactus-paragraph">Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
-            <button class="contactus-button">contact us</button>
+            <button class="contactus-button">
+                <div class="contactus-button-text">contact us</div>
+            </button>
         </fieldset>
     </section>
     <footer class="footer">
-        <img src="./img/logo-small.png" alt="small logo">
-        <p class="footer-copyright">© 2014. All Rights Reserved Ellipsis.com</p>
+        <div class="footer-box">
+            <img src="./img/logo-small.png" alt="small logo">
+            <p class="footer-copyright">© 2014. All Rights Reserved Ellipsis.com</p>
+        </div>
     </footer>
 </body>
 </html>
